cmake_minimum_required(VERSION 3.24)
project(Advent)

set(CMAKE_CXX_STANDARD 17)

add_executable(Advent main.cpp Days/Day1/day1.cpp Days/Day1/day1.h Days/Day2/day2.cpp Days/Day2/day2.h Days/Day3/day3.cpp Days/Day3/day3.h Days/Day4/day4.cpp Days/Day4/day4.h Days/Day5/day5.cpp Days/Day5/day5.h Days/Day6/day6.cpp Days/Day6/day6.h Days/Day7/day7.cpp Days/Day7/day7.h Days/Day8/day8.cpp Days/Day8/day8.h)
