cmake_minimum_required(VERSION 3.24)
project(Advent)

set(CMAKE_CXX_STANDARD 20)

add_executable(Advent main.cpp Days/Day1/day1.cpp Days/Day1/day1.h Days/Day2/day2.cpp Days/Day2/day2.h Days/Day3/day3.cpp Days/Day3/day3.h Days/Day4/day4.cpp Days/Day4/day4.h Days/Day5/day5.cpp Days/Day5/day5.h Days/Day6/day6.cpp Days/Day6/day6.h Days/Day7/day7.cpp Days/Day7/day7.h Days/Day8/day8.cpp Days/Day8/day8.h Days/Day9/day9.cpp Days/Day9/day9.h Days/Day10/day10.cpp Days/Day10/day10.h Days/Day11/day11.cpp Days/Day11/day11.h Days/Day12/day12p1.cpp Days/Day12/day12p1.h Days/Day12/day12p2.cpp Days/Day12/day12p2.h Days/Day13/day13.cpp Days/Day13/day13.h Days/Day14/day14.cpp Days/Day14/day14.h Days/Day15/day15.cpp Days/Day15/day15.h Days/Day16/day16.cpp Days/Day16/day16.h Days/Day17/day17.cpp Days/Day17/day17.h Days/Day18/day18.cpp Days/Day18/day18.h Days/Day19/day19.cpp Days/Day19/day19.h)
